[package]
name = "navmesh"
version = "0.14.0"
authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
edition = "2021"
description = "NavMesh, NavNet, NavGrid, NavFreeGrid and NavIslands navigation system"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/PsichiX/navmesh"
repository = "https://github.com/PsichiX/navmesh"
documentation = "https://docs.rs/navmesh"
readme = "./README.md"

[features]
parallel = ["rayon"]
scalar64 = []
web = ["typid/web"]

[dependencies]
typid  = "1.1.1"
petgraph = { version = "0.6", features = [] }
spade = { version = "1.8", features = [] }
rayon = { version = "1.7", optional = true }
approx = "0.5.1"
glam = { version = "0.23", optional = true }
cgmath = { version = "0.18", optional = true }
nalgebra = { version = "0.32.2", optional = true }
